@@ -772,7 +772,7 @@ bt_cursor_move(ham_bt_cursor_t *c, ham_key_t *key,
             record->_intflags=key_get_flags(entry);
             record->_rid=key_get_ptr(entry);
         }
-        st=util_read_record(db, record, flags);
+        st=util_read_record(db, record, &key_get_rawptr(entry), flags);
         if (st) {
             page_release_ref(page);
             return (st);
