@@ -76,6 +76,7 @@ HAM_PACK_0 struct HAM_PACK_1 int_key_t
                                      (key_get_flags(k)&KEY_BLOB_SIZE_SMALL))   \
                                     ? (k)->_ptr                                \
                                     : ham_db2h_offset((k)->_ptr))
+#define key_get_rawptr(k)          (k)->_ptr
 
 /**
  * set the pointer of an btree-entry
