@@ -1,3 +1,8 @@
+Oct 16, 2010 - chris ---------------------------------------------------
+o bugfix: using HAM_DIRECT_ACCESS with records of a length <= 8 bytes
+    returned pointers to temporary copies of the record and not to the
+    original data (thanks, Lionel)
+
 Oct 14, 2010 - chris ---------------------------------------------------
 o another important performance improvements when using hamsterdb with
     extended keys
